# aws-rag-bot

./: .env_sample  .gitignore  LICENSE  README.md  langchain_code_samples.ipynb  pyproject.toml  rag_bot_code_samples.ipynb
aws_rag_bot/: README_OpenSearch.md  aws_opensearch_vector_database.py  kustomer.py  prompt_library.py  rag_chatbot.py
aws_rag_bot/open_search_vector_db/: aws_opensearch_vector_database.py  sample_opensearch_vector_database_code.ipynb
tests/: chatbot_cli_client.py  claude21_prompttuning.py  provision_opensearch_index.py  ragas_evaluation.py  ragbot_testcases.py  search_testcases.py
