[tool.poetry]
name = "aws-rag-bot"
version = "0.1.3"
description = ""
authors = ["danjamk <dan@risegardens.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyter = "^1.0.0"
langchain = "^0.1.9"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.7"
boto3 = "^1.34.50"
requests-aws4auth = "^1.2.3"
opensearch-py = "^2.4.2"
selenium = "^4.18.1"
unstructured = "^0.12.4"
langchain-google-genai = "^0.0.9"
transformers = "^4.38.1"
colorama = "^0.4.6"
tensorflow = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
