[tool.poetry]
name = "aws-rag-bot"
version = "0.1.5"
description = ""
authors = ["danjamk <dan@risegardens.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
boto3 = "^1.34.51"
python-dotenv = "^1.0.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
opensearch-py = "^2.4.2"
requests = "^2.31.0"
requests-aws4auth = "^1.2.3"
langchain-google-genai = "^0.0.9"
transformers = "^4.38.1"
selenium = "^4.18.1"
unstructured = "^0.12.5"
torch = "^2.2.1"
anthropic = "^0.16.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
